--- a/Views/Admin/Product.cshtml
+++ b/Views/Admin/Product.cshtml
@@ -20,7 +20,7 @@
     <button class="btn btn-info float-end" data-toggle="modal" data-target="#Modal">Add New Product</button>
     <h3 >Add Product</h3>
 
-    <div class="modal fade" id="Modal" tabindex="-1" aria-labelledby="ModalLabel" aria-hidden="true">
+    <div class="modal fade" id="Modal" tabindex="-1" aria-labelledby="ModalLabel" aria-hidden="true" data-backdrop="static" data-keyboard="false">
         <div class="modal-dialog">
             <div class="modal-content">
                 <div class="modal-header">
