--- a/Views/User/ForgetPassword.cshtml
+++ b/Views/User/ForgetPassword.cshtml
@@ -42,7 +42,8 @@
                         </div>
                         <div class="col-sm-12" id="p1">
                             <span class="text-white">Enter your New Password</span>
-                            <input type="password" class="form-control" id="newpass" placeholder="Enter your new password" />
+                            <input type="password" class="form-control" id="newpass" placeholder="Please Enter Password in abcd@123 Formate" />
+                            
                         </div>
                         <div class="col-sm-12" id="p2">
                             <span class="text-white">Confirm Password</span>
@@ -61,11 +62,15 @@
 
     <!-- jQuery -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
-
-    <script>
+ <script>
         $(document).ready(function () {
-            $("#p1").hide();
-            $("#p2").hide();
+            $("#newpass").hide();
+            $("#confirmpass").hide();
+
+            function validatePassword(password) {
+                var passwordRegex = /^(?=.*?[A-Z])(?=.*?[a-z])(?=.*?[0-9])(?=.*?[#?!@@$%^&*-]).{6,}$/;
+                return passwordRegex.test(password);
+            }
 
             $('#btn').click(function () {
                 var email = $("#Emailid").val();
@@ -80,15 +85,16 @@
                         success: function (res) {
                             var status = res.status;
                             var message = res.message;
-                            alert(message);
+                          
 
                             if (status == 1) {
-
-                                $("#p1").show();
-                                $("#p2").show();
+                                $("#newpass").show();
+                                $("#confirmpass").show();
                                 $("#btn").val("Change Password");
                                 $("#Emailid").prop("disabled", true);
-
+                            }
+                            if (status == -1) {
+                                alert(message);
                             }
                         },
                         error: function () {
@@ -96,18 +102,25 @@
                         }
                     });
                 } else if (email != "" && Newpassword != "" && ConfirmPassword != "") {
+                    if (Newpassword.length < 6) {
+                        alert('Please enter a password with at least 6 characters.');
+                        return;
+                    }
+                    if (ConfirmPassword = "")
+                    {
+                        alert("please enter confirm password ")
+                    }
                     if (Newpassword == ConfirmPassword) {
                         $.ajax({
                             url: '/User/changePasswords',
                             type: 'POST',
                             data: { "Email": email, "Password": Newpassword, "Cpassword": ConfirmPassword },
                             success: function (res) {
-                               
-                                alert(res) ;
-                              window.location.href = "/User/Login";
-                                 $("#Emailid").val('');
+                                alert(res);
+                                window.location.href = "/User/Login";
+                                $("#Emailid").val('');
                                 $("#newpass").val('');
-                               $("#confirmpass").val('');
+                                $("#confirmpass").val('');
                                 $("#btn").val("Verify Email");
                             },
                             error: function () {
@@ -115,27 +128,39 @@
                             }
                         });
                     } else {
+                        alert("Password and confirm Password is not match")
                         $("#confirmpass").css("border", "2px solid red");
+                        
                     }
                 }
             });
 
             // Keypress event for password fields
-            $("#newpass, #confirmpass").keypress(function (event) {
+            $("#newpass","#confirmpass").keypress(function (event) {
                 var charCode = event.which || event.keyCode;
                 var charStr = String.fromCharCode(charCode);
 
-                if (!((charCode >= 48 && charCode <= 57) ||
-                    (charCode >= 65 && charCode <= 90) ||
-                    (charCode >= 97 && charCode <= 122) ||
-                    charCode === 64 ||
-                    charCode === 8)) {
+                // Allow specific characters
+                if (!((charCode >= 48 && charCode <= 57) || 
+                      (charCode >= 65 && charCode <= 90) || 
+                      (charCode >= 97 && charCode <= 122) || 
+                      /[#!@@$%^&*-]/.test(charStr) || 
+                      charCode === 8)) {
                     event.preventDefault();
                 }
 
-                var price = $(this).val();
-                if (price.length >= 10) {
+                var password = $(this).val() + charStr;
+
+                // Prevent further input if the length is 10 or more characters
+                if (password.length > 6) {
                     event.preventDefault();
+                }
+
+                // Validate the current password value with the regex
+                if (!validatePassword(password)) {
+                    // Optionally, you can add some feedback to the user here
+                    // For example, display a message or highlight the input field
+                    console.log("Password does not meet the criteria");
                 }
             });
         });
