--- a/Views/Admin/Category.cshtml
+++ b/Views/Admin/Category.cshtml
@@ -6,65 +6,58 @@
 
 
 
+<body class="body">
+    <h4>
+        <span>CATEGORY LIST</span>
+        <button type="button" class="btn btn-primary float-end" data-toggle="modal" data-target="#myModal">
+            Add category
+        </button>
+    </h4>
+    <div id="DivPrtCategoryList">
+    </div>
+    <div class="container mt-5">
+        <!-- The Modal -->
+        <div class="modal fade" id="myModal" data-backdrop="static" data-keyboard="false">
+            <div class="modal-dialog">
+                <div class="modal-content">
+                    <!-- Modal Header -->
+                    <div class="modal-header">
+                        <h5 class="modal-title">Add Category</h5>
+                        <button type="button" class="close" data-dismiss="modal">&times;</button>
+                    </div>
 
+                    <!-- Modal body -->
+                    <div class="modal-body">
+                        <form id="categoryForm">
+                            <input type="text" id="hdnCategoryId" hidden />
+                            <div class="form-group">
+                                <label for="Category">Category Name</label>
+                                <input type="text" id="Category" class="form-control" placeholder="Enter the Category name" />
+                            </div>
+                            <div class="form-group">
+                                <label for="check">IsActive</label>
+                                <input type="checkbox" id="check" checked />
+                            </div>
+                        </form>
+                    </div>
 
-
-   
-
-
-<body class="body" >
-<h4>
-        <span >CATEGORY LIST</span>
-    <button type="button" class="btn btn-primary float-end" data-toggle="modal" data-target="#myModal">
-       Add category
-    </button>
-</h4>
-<div id="DivPrtCategoryList">
-
-</div>
-<div class="container mt-5" >
-    <!-- The Modal -->
-    <div class="modal fade" id="myModal">
-        <div class="modal-dialog">
-            <div class="modal-content">
-                <!-- Modal Header -->
-                <div class="modal-header">
-                    <h5 class="modal-title" >Add Category</h5>
-                    <button type="button" class="close" data-dismiss="modal">&times;</button>
-                </div>
-
-                <!-- Modal body -->
-                <div class="modal-body">
-                    <form id="categoryForm">
-                        <input type="text" id="hdnCategoryId" hidden />
-                        <div class="form-group">
-                            <label for="Category">Category Name</label>
-                            <input type="text" id="Category" class="form-control" placeholder="Enter the Category name" />
-                        </div>
-                        <div class="form-group">
-                            <label for="check">IsActive</label>
-                            <input type="checkbox" id="check" checked />
-                        </div>
-                    </form>
-                </div>
-
-                <!-- Modal footer -->
-                <div class="modal-footer">
-                    <button type="button" class="btn btn-success" id="btn" >Submit</button>
-                    <button type="button" class="btn btn-danger" data-dismiss="modal">Close</button>
+                    <!-- Modal footer -->
+                    <div class="modal-footer">
+                        <button type="button" class="btn btn-success" id="btn">Submit</button>
+                        <button type="button" class="btn btn-danger" data-dismiss="modal">Close</button>
+                    </div>
                 </div>
             </div>
         </div>
     </div>
-</div>
 
-<script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
-<link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
-<script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
-<script src="https://cdn.jsdelivr.net/npm/@@popperjs/core@2.9.2/dist/umd/popper.min.js"></script>
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+    <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
+    <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@@popperjs/core@2.9.2/dist/umd/popper.min.js"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 
-<script>
+    <script>
         $(document).ready(function () {
             GetCategoryList();
             $('#btn').click(function () {
@@ -118,7 +111,6 @@
             });
         });
 
-
         function GetCategoryList() {
             try {
                 $.ajax({
@@ -135,7 +127,6 @@
                 console.log(error);
             }
         }
-
 
         function AddOrUpdateCategory() {
             try {
@@ -155,6 +146,7 @@
                         try {
                             var statusCode = res.status;
                             var message = res.message;
+                            debugger;
                             if (statusCode == 1) {
                                 Swal.fire({
                                     icon: "success",
@@ -166,10 +158,10 @@
                                     showCancelButton: true,
                                     timerProgressBar: true
                                 });
+                                $("#myModal .close").click()
                                 GetCategoryList();
-                                $('#myModal').trigger('click');
-                                $('#myModal').modal('hide');
                             }
+
                             if (statusCode == -1) {
                                 Swal.fire({
                                     icon: "error",
@@ -203,8 +195,7 @@
                     data: { CategoryID: CategoryID },
                     success: function (res) {
                         debugger;
-                        if (res == "")
-                        {
+                        if (res == "") {
                             Swal.fire({
                                 icon: "success",
                                 title: 'Data Deleted Successfully',
@@ -216,9 +207,7 @@
                                 timerProgressBar: true
                             });
                             GetCategoryList();
-                        }
-                        else
-                        {
+                        } else {
                             Swal.fire({
                                 icon: "error",
                                 title: res,
@@ -246,15 +235,13 @@
                     success: function (res) {
                         try {
                             for (var x of res) {
-                                var value = $.trim(x.categoryName); 
-                                alert(value)
+                                var value = $.trim(x.categoryName);
 
                                 $("#Category").val(value);
                                 $("#hdnCategoryId").val(x.categoryId);
                                 $("#check").prop("checked", x.isActive);
                                 $('.modal-title').text('Update category');
                                 $("#btn").text("Update");
-
                             }
                         } catch (error) {
                             console.log(error);
@@ -292,7 +279,7 @@
         // Add event listener to validate input on change
         document.getElementById("Category").addEventListener("input", alphabetOnly);
 
-</script>
+    </script>
 </body>
 
 
