--- a/Views/Admin/GetUserList.cshtml
+++ b/Views/Admin/GetUserList.cshtml
@@ -11,7 +11,6 @@
 <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 <script src="https://code.jquery.com/ui/1.13.3/jquery-ui.js"></script>
 <link rel="stylesheet" href="https://code.jquery.com/ui/1.13.3/themes/base/jquery-ui.css">
-
 <script>
 $(document).ready(function(){
        GetUserList()
@@ -21,7 +20,7 @@ $(document).ready(function(){
         $.ajax({
             url: "/admin/PrtUserList",
             type: "GET",
-            success: function (response) 
+            success: function (response)  
             {
                 debugger;
                 $("#GetUserList").html(response)
@@ -37,6 +36,7 @@ $(document).ready(function(){
             data: { 'userId': _this },
             success: function (res) {
                 GetUserList()
+                alert('Status Update successfully ')
             },
             error: function () {
                 alert('Failed to change status');
