--- a/Views/Admin/PrtUserList.cshtml
+++ b/Views/Admin/PrtUserList.cshtml
@@ -30,15 +30,18 @@
             content: "";
             height: 26px;
             width: 26px;
+
             left: 4px;
             bottom: 4px;
             background-color: white;
             -webkit-transition: .4s;
             transition: .4s;
+            border-radius: 30px
         }
 
     input:checked + .slider {
         background-color: #2196F3;
+        border-radius:30px
     }
 
     input:focus + .slider {
@@ -72,6 +75,7 @@
         height: 1030px;
         width: 500px;
         margin: 100px auto;
+        border-radius:30px
     }
 
     input[type=text], input[type=number], input[type=date], input[type=email], select {
@@ -82,8 +86,36 @@
         color: white;
     }
 
+    #table {
+        border: solid 5px;
+        border-top-color: #8B0000;
+        border-right-color: #8B0000;
+        border-bottom-color: #8B0000;
+        border-left-color: #8B0000;
+        width: 100%;
+        border-collapse: collapse;
+        font-family: Arial, sans-serif;
+        font-size: 14px;
+        background-color: #ddddee; /* Light grayish-blue background color */
+    }
+
+        #table th, #table td {
+            border: solid 1px #8B0000; /* Dark border for table cells */
+            padding: 10px; /* Increased padding inside cells */
+            text-align: left; /* Align text left within cells */
+        }
+
+        #table th {
+            background-color: #4B0082; /* Dark purple background color for headers */
+            color: white; /* White text color for headers */
+            font-weight: bold; /* Bold font for headers */
+        }
+
+        #table tbody tr:nth-child(even) {
+            background-color: #f0f0f0; /* Light gray alternate row color */
+        }
 </style>
-<table class="border border-5 table table-bordered " style="background:#ddddee">
+<table id="table">
     <thead>
         <tr>
             <th>User Id</th>
@@ -91,10 +123,10 @@
             <th>Email</th>
             <th>Password</th>
             <th>Phone No</th>
-            <th>IsActive</th>
+    
             <th>Address</th>
             <th>Entry Date</th>
-<th>Action</th>
+            <th>Active Status </th>
         </tr>
     </thead>
     <tbody>
@@ -107,13 +139,19 @@
                 <td>@item.Email</td>
                 <td>@item.Password</td>
                 <td>@item.Phone</td>
-                <td>@(item.IsActive == true ? "Active" : "InActive")</td>
+               
                 <td>@item.Address</td>
                 <td>@item.EntryDate</td>
+
+               @*  <label class="switch">
+                    <input type="checkbox" style="   border-radius:30px" id="checkbox_" @(item.IsActive == true ? "checked" : "") onclick="if(confirm('Are u sure want to change the status'))modifystatus(@item.Id)">
+                    <span class="slider" style="   border-radius:30px"></span>
+                </label> *@
                 <td>
                     <label class="switch">
-                        <input type="checkbox" id="checkbox_" @(item.IsActive==true ? "checked" :"" ) onclick="if(confirm('Are u sure want to change the status'))modifystatus(@item.Id)">
-                        <span class="slider"></span>
+                        <input type="checkbox" style="   border-radius:30px" id="checkbox_" @(item.IsActive == true ? "checked" : "")
+                               onclick="if(confirm('Are u sure want to change the status'))modifystatus(@item.Id)">
+                        <span class="slider" style="   border-radius:30px"></span>
                     </label>
                 </td>
             </tr>
